Fix frontend build (#853)
* Fixed some lint issues

* Fixed reload in builded pages

* Closed #847 Fixed reload builded pages

--- a/nginx-proxy-development.conf
+++ b/nginx-proxy-development.conf
@@ -49,25 +49,55 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    # root /var/www/html/;
+    # index index.html;
+
     # # Frontend Public Page Builded
     # location / {
-    #     alias /var/www/public_page/;
-    #     try_files $uri $uri/ /index.html;
+    #     root /var/www/html;
+    #     try_files $uri $uri/ /index.html$is_args$args;
     #     autoindex off;
     # }
     # # Frontend Dashboard Builded
     # location /dashboard/ {
-    #     alias /var/www/dashboard/;
-    #     try_files $uri $uri/ =404;
-    #     autoindex off;
+    #     if (!-e $request_filename){
+    #         rewrite ^(.*)$ /dashboard/index.html break;
+    #     }
     # }
 
     # Alias para / quando chamado pelo dashboard
-    location /public_home/ {
-        alias /var/www/public_page/;
-        try_files $uri $uri/ =404;
-        autoindex off;
+    location = /public_home {
+        return 301 /;
     }
+
+
+    # if ($request_uri !~ "^/dashboard")
+    # {
+    #     rewrite ^([^.]*[^/])$ $1/ permanent;
+    #     rewrite ^([^.]*)$ /dashboard/index.php;
+    # }
+
+    # location /dashboard {
+    #     if (!-e $request_filename){
+    #         rewrite ^(.*)$ /dashboard/index.html break;
+    #     }
+    # }
+    # location /dashboard/ {
+    #     if (!-e $request_filename){
+    #         rewrite ^(.*)$ /dashboard/index.html break;
+    #     }
+    # }
+
+    # # Frontend Dashboard Builded
+    # location /dashboard {
+    #     root /var/www/html/dashboard;
+    #     try_files $uri $uri/ /index.html$is_args$args;
+    #     autoindex off;
+    #     # if (!-e $request_filename){
+    #     #     rewrite ^(.*)$ /index.html$is_args$args break;
+    #     # }
+    # }
+
 
     location /api {
         include uwsgi_params;
