Closed #848 Enviroment Variables

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,4 +24,5 @@ repos:
     hooks:
     -   id: isort
         name: isort (python)
+        args: ["--profile", "black"]
         exclude: ^(migrations/|pipelines/|backend/old_apps/)
