--- a/predict_occultation/Dockerfile
+++ b/predict_occultation/Dockerfile
@@ -123,27 +123,18 @@ RUN groupadd --gid ${USERGID} ${USERNAME} \
 ENV PIPELINE_ROOT=${APP_HOME}/src
 ENV PIPELINE_PREDIC_OCC=${PIPELINE_ROOT}/predict_occultation
 ENV PIPELINE_PATH=${PIPELINE_PREDIC_OCC}/pipeline
-ENV PREDICT_OUTPUTS=${APP_HOME}/outputs/predict_occultation
 
 # quando parsl_env = local o diretório remoto é o mesmo que o local.
 # mas quando parsl_env = linea o diretório remoto é por ex: /lustre/t1/scratch/users/app.tno/tno_testing
-ENV REMOTE_PIPELINE_ROOT=$PIPELINE_ROOT
-
+# ENV REMOTE_PIPELINE_ROOT=$PIPELINE_ROOT
+# ENV PREDICT_OUTPUTS=${PIPELINE_ROOT}/outputs/predict_occultation
+ENV REMOTE_CONDA_PATH=/opt/conda/bin
 
 COPY --chown=${USERNAME}:ton --chmod=775 src /app/src
 COPY --chown=${USERNAME}:ton --chmod=775 entrypoint.sh ${APP_HOME}
+COPY --chown=${USERNAME}:ton --chmod=775 check_enviroment.py ${APP_HOME}
 
-# COPY --chown=${USERNAME}:ton --chmod=775 src ${PIPELINE_ROOT}
-# COPY --chown=${USERNAME}:ton --chmod=775 src/predict_occultation ${PIPELINE_PREDIC_OCC}
-# COPY --chown=${USERNAME}:ton --chmod=775 src ${PIPELINE_ROOT}
-# COPY --chown=${USERNAME}:ton --chmod=775 predict_occultation ${PIPELINE_PREDIC_OCC}
-# COPY --chown=${USERNAME}:ton --chmod=775 rerun.py ${APP_HOME}
-# COPY --chown=${USERNAME}:ton --chmod=775 rerun.sh ${APP_HOME}
-# COPY --chown=${USERNAME}:ton --chmod=775 daemon.sh ${APP_HOME}
-# COPY --chown=${USERNAME}:ton --chmod=775 entrypoint.sh ${APP_HOME}
-# COPY --chown=${USERNAME}:ton --chmod=775 run_daemon.py ${APP_HOME}
-
-RUN chmod =2775 ${PIPELINE_ROOT} \
+RUN chmod -R =2775 ${PIPELINE_ROOT} \
     && chmod =2775 ${APP_HOME} \
     && mv de440.bsp ${PIPELINE_PATH}/$BSP_PLANETARY_NAME \
     && mv naif0012.tls ${PIPELINE_PATH}/$LEAP_SECOND_NAME
