--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,5 +24,5 @@ repos:
     hooks:
     -   id: isort
         name: isort (python)
-        args: ["--profile", "black"]
+        args: ["--profile", "black", "--skip", "migrations"]
         exclude: ^(migrations/|pipelines/|backend/old_apps/)
