--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-date-range": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-images": "1.2.0-beta.7",
+    "react-infinite-scroller": "^1.2.6",
     "react-lazyload": "3.2.0",
     "react-markdown": "^9.0.1",
     "react-plotly.js": "^2.3.0",
