--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/styles": "^5.10.17",
     "@mui/x-data-grid": "^6.16.2",
     "@mui/x-date-pickers": "^6.16.2",
+    "@researchgate/react-intersection-observer": "^1.3.5",
     "aladin-lite": "^3.2.0",
     "axios": "^1.6.7",
     "browserslist": "^4.22.3",
@@ -36,7 +37,6 @@
     "react-date-range": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-images": "1.2.0-beta.7",
-    "react-infinite-scroller": "^1.2.6",
     "react-lazyload": "3.2.0",
     "react-markdown": "^9.0.1",
     "react-plotly.js": "^2.3.0",
