--- a/nginx-proxy-development.conf
+++ b/nginx-proxy-development.conf
@@ -49,17 +49,23 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # root /var/www/html/;
-    # index index.html;
-
-    # # Frontend Public Page Builded
     # location / {
-    #     root /var/www/html;
-    #     try_files $uri $uri/ /index.html$is_args$args;
-    #     autoindex off;
+    #     root /var/www/frontend;
+    #     try_files $uri $uri/ /index.html;
     # }
+    # root /var/www/html;
+    # index index.html;
+    # Frontend Public Page Builded
+    # location / {
+    #     root /var/www/html/home;
+    #     index index.html;
+    #     try_files $uri /index.html$is_args$args;
+    # }
+
     # # Frontend Dashboard Builded
     # location /dashboard/ {
+    #     root /var/www/html/dashboard;
+    #     index index.html;
     #     if (!-e $request_filename){
     #         rewrite ^(.*)$ /dashboard/index.html break;
     #     }
@@ -128,21 +134,6 @@ server {
         autoindex off;
     }
 
-    # # Serviço SORA para geracao de mapas de predicao.
-    # location /sora {
-    #     rewrite /sora/(.*) /$1 break;
-    #     proxy_pass $scheme://tnosora;
-    #     proxy_set_header X-Forwarded-For $remote_addr;
-    #     proxy_set_header X-Real-IP  $remote_addr;
-    #     proxy_set_header Host $host;
-
-    #     # live reload
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection 'upgrade';
-    #     proxy_cache_bypass $http_upgrade;
-    # }
-
     # Celery Flower
     location /flower {
         proxy_pass http://celery_flower:5555;
@@ -153,4 +144,6 @@ server {
         proxy_pass http://rabbit:15672/;
         rewrite ^/rabbitmq/(.*)$ /$1 break;
     }
+
+
 }
