Added frontend lint and format to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,25 +28,19 @@ repos:
         exclude: ^(migrations/|pipelines/|backend/old_apps/)
 -   repo: local
     hooks:
-    -   id: eslint
-        name: eslint (Javascript)
+    -   id: frontend_lint
+        name: eslint and prettier (Javascript)
         language: system
         files: 'frontend/.*\.(js|jsx|ts|tsx)$'
         pass_filenames: false
-        entry: bash -c 'cd frontend && yarn lint'
+        entry: bash -c 'cd frontend && yarn lint-staged'
         always_run: true
--   repo: local
-    hooks:
-    -   id: prettier
-        name: prettier (Javascript)
-        language: system
-        files: 'frontend/.*\.(js|jsx|ts|tsx)$'
-        pass_filenames: false
-        entry: bash -c 'cd frontend && yarn format'
-        always_run: true
-# - id: eslint
-#             name: eslint
-#             types: [file]
-#             files: 'frontend/.*\.(js|jsx|ts|tsx)$'
-#             entry: bash -c 'cd frontend && yarn precommit-lint "$@"'
-#             language: system
+# -   repo: local
+#     hooks:
+#     -   id: prettier
+#         name: prettier (Javascript)
+#         language: system
+#         files: 'frontend/.*\.(js|jsx|ts|tsx)$'
+#         pass_filenames: false
+#         entry: bash -c 'cd frontend && yarn format'
+#         always_run: true
