--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
       - id: trailing-whitespace
@@ -14,26 +14,26 @@ repos:
       - id: check-case-conflict
       - id: check-docstring-first
       - id: detect-private-key
--   repo: https://github.com/psf/black
+  - repo: https://github.com/psf/black
     rev: 24.1.1
     hooks:
-    -   id: black
+      - id: black
         exclude: ^(migrations/|pipelines/)
--   repo: https://github.com/pycqa/isort
+  - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
-    -   id: isort
+      - id: isort
         name: isort (python)
-        args: ["--profile", "black", "--skip", "migrations"]
+        args: ['--profile', 'black', '--skip', 'migrations']
         exclude: ^(migrations/|pipelines/|backend/old_apps/)
--   repo: local
+  - repo: local
     hooks:
-    -   id: frontend_lint
+      - id: frontend_lint
         name: eslint and prettier (Javascript)
         language: system
         files: 'frontend/.*\.(js|jsx|ts|tsx)$'
         pass_filenames: false
-        entry: bash -c 'cd frontend && yarn lint-staged'
+        entry: bash -c 'cd frontend && yarn lint && yarn format'
         always_run: true
 # -   repo: local
 #     hooks:
