--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,15 +26,29 @@ repos:
         name: isort (python)
         args: ['--profile', 'black', '--skip', 'migrations']
         exclude: ^(migrations/|pipelines/|backend/old_apps/)
-  - repo: local
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: v8.56.0
     hooks:
-      - id: frontend_lint
-        name: eslint and prettier (Javascript)
-        language: system
-        files: 'frontend/.*\.(js|jsx|ts|tsx)$'
-        pass_filenames: false
-        entry: bash -c 'cd frontend && yarn lint && yarn format'
-        always_run: true
+      - id: eslint
+        name: Eslint
+        entry: bash -c 'cd frontend && eslint . --fix --max-warnings=0'
+        additional_dependencies:
+          - eslint@8.28.0
+          - eslint-config-airbnb@19.0.4
+          - eslint-config-prettier@8.5.0
+          - eslint-plugin-react@7.14.3
+          - eslint-plugin-import@2.18.2
+          - eslint-plugin-react-hooks@4.6.0
+          - babel-eslint@6.1.2
+  # - repo: local
+  #   hooks:
+  #     - id: frontend_lint
+  #       name: eslint and prettier (Javascript)
+  #       language: system
+  #       files: 'frontend/.*\.(js|jsx|ts|tsx)$'
+  #       pass_filenames: false
+  #       entry: bash -c 'cd frontend && yarn lint && yarn format'
+  #       always_run: true
 # -   repo: local
 #     hooks:
 #     -   id: prettier
