--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,31 +1,30 @@
 repos:
-  # - repo: https://github.com/pre-commit/pre-commit-hooks
-  #   rev: v2.3.0
-  #   hooks:
-  #     - id: trailing-whitespace
-  #     - id: end-of-file-fixer
-  #     - id: check-toml
-  #     - id: check-xml
-  #     - id: check-yaml
-  #     - id: debug-statements
-  #       exclude: ^pipelines/
-  #     - id: check-builtin-literals
-  #       exclude: ^(pipelines/|backend/old_apps/|orbit_trace/)
-  #     - id: check-case-conflict
-  #     - id: check-docstring-first
-  #     - id: detect-private-key
-  # - repo: https://github.com/psf/black
-  #   rev: 24.1.1
-  #   hooks:
-  #     - id: black
-  #       exclude: ^(migrations/|pipelines/)
-  # - repo: https://github.com/pycqa/isort
-  #   rev: 5.12.0
-  #   hooks:
-  #     - id: isort
-  #       name: isort (python)
-  #       args: ['--profile', 'black', '--skip', 'migrations']
-  #       exclude: ^(migrations/|pipelines/|backend/old_apps/)
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.3.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-toml
+      - id: check-xml
+      - id: check-yaml
+      - id: debug-statements
+      - id: check-builtin-literals
+        exclude: ^(backend/old_apps/|orbit_trace/)
+      - id: check-case-conflict
+      - id: check-docstring-first
+      - id: detect-private-key
+  - repo: https://github.com/psf/black
+    rev: 24.1.1
+    hooks:
+      - id: black
+        exclude: ^(migrations/)
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        name: isort (python)
+        args: ['--profile', 'black', '--skip', 'migrations']
+        exclude: ^(migrations/|backend/old_apps/)
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v8.56.0
     hooks:
