--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -90,7 +90,7 @@
           // "linting.pylintPath": "/usr/local/bin/pylint"
         },
         "[javascript]": {
-          "editor.defaultFormatter": "dbaeumer.vscode-eslint", // preconfig ESLint
+          "editor.defaultFormatter": "esbenp.prettier-vscode",
           "editor.tabSize": 2
         },
         "[json]": {
