--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,8 @@
     "react-youtube": "10.1.0",
     "remark-gfm": "^4.0.0",
     "update-browserslist-db": "^1.0.13",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
