--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,6 +33,7 @@ django-settings-export==1.2.1
 django-shibboleth-remoteuser==0.12
 django-timezone-field==5.0
 django-url-filter==0.3.15
+django-environ==0.11.2
 djangorestframework==3.14.0
 enum-compat==0.0.3
 Fiona==1.9.4.post1
