--- a/compose/production/nginx_proxy.conf
+++ b/compose/production/nginx_proxy.conf
@@ -1,5 +1,3 @@
-
-
 server {
     listen 8080;
 
@@ -22,12 +20,15 @@ server {
     uwsgi_read_timeout 120s;
     uwsgi_send_timeout 120s;
 
+    # access_log /var/log/nginx/access.log  main;
+    # error_log /var/log/nginx/error.log warn;
+
     location / {
         root /var/www/frontend;
         try_files $uri $uri/ /index.html;
     }
 
-        location /api {
+    location /api {
         include uwsgi_params;
         uwsgi_pass $scheme://backend:8000$request_uri;
         uwsgi_read_timeout 120s;
@@ -62,10 +63,10 @@ server {
         #autoindex off;
     }
 
-    # Celery Flower
-    location /flower {
-        proxy_pass http://celery_flower:5555;
-    }
+    # # Celery Flower
+    # location /flower {
+    #     proxy_pass http://celery_flower:5555;
+    # }
 
     # Rabbitmq Management
     location /rabbitmq/ {
