Added user documentation in mkdocs instance

--- a/compose/local/nginx-proxy-development.conf
+++ b/compose/local/nginx-proxy-development.conf
@@ -134,6 +134,18 @@ server {
         autoindex off;
     }
 
+    # Mkdocs User Documentation
+    # location /docs {
+    #     proxy_pass http://mkdocs:8000/;
+    #     rewrite ^/rabbitmq/(.*)$ /$1 break;
+
+    #     # live reload
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection 'upgrade';
+    #     proxy_cache_bypass $http_upgrade;
+    # }
+
     # Celery Flower
     location /flower {
         proxy_pass http://celery_flower:5555;
