--- a/compose/production/nginx_proxy.conf
+++ b/compose/production/nginx_proxy.conf
@@ -63,6 +63,13 @@ server {
         #autoindex off;
     }
 
+    # /docs  Diretório da documentação de usuarios builded com mkdocs
+    location /docs/ {
+        alias /var/www/docs/;
+        try_files $uri $uri/ /index.html;
+        autoindex off;
+    }
+
     # # Celery Flower
     # location /flower {
     #     proxy_pass http://celery_flower:5555;
