--- a/compose/production/env.template
+++ b/compose/production/env.template
@@ -4,8 +4,8 @@ TNO_IMAGE_TAG=teste
 TNO_UID=31670
 TNO_GID=15010
 TNO_SSHKEY=/lustre/t1/scratch/users/app.tno/.ssh/id_rsa
-TNO_PROJ_DIR=/lustre/t1/scratch/users/app.tno/tno_dev
-TNO_PORT=8060
+TNO_PROJ_DIR=/lustre/t1/scratch/users/app.tno/tno_prod
+TNO_PORT=8097
 
 # RabbitMQ
 # -------------------------------------
@@ -15,15 +15,15 @@ RABBITMQ_DEFAULT_VHOST=tno_vhost
 
 # Django
 # -------------------------------------
-DJANGO_ENVIRONMENT_NAME=Testing
+DJANGO_ENVIRONMENT_NAME=Production
 DJANGO_DEBUG=False
 # https://docs.djangoproject.com/en/dev/ref/settings/#secret-key
 # SECURITY WARNING: keep the secret key used in production secret!
 DJANGO_SECRET_KEY=vG3ndoJhuI6nGtFhZdeA2F6DEsJWUB0is3oyGaBM3g
 # https://docs.djangoproject.com/en/dev/ref/settings/#allowed-hosts
-DJANGO_ALLOWED_HOSTS=tno-dev.linea.org.br
+DJANGO_ALLOWED_HOSTS=solarsystem.linea.org.br
 DJANGO_CELERY_BROKER_URL=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbit:5672/${RABBITMQ_DEFAULT_VHOST}
-DJANGO_CELERY_WORKER_CONCURRENCY=6
+DJANGO_CELERY_WORKER_CONCURRENCY=10
 DJANGO_UWSGI_WORKER_PROCESSES=2
 DJANGO_UWSGI_WORKER_THREADS=2
 
