Fix production nginx config

--- a/compose/production/nginx_proxy-template.conf
+++ b/compose/production/nginx_proxy-template.conf
@@ -1,3 +1,7 @@
+upstream tnoapi {
+    server backend:8000;
+}
+
 server {
     listen 8080;
 
@@ -30,28 +34,28 @@ server {
 
     location /api {
         include uwsgi_params;
-        uwsgi_pass $scheme://backend:8000$request_uri;
-        uwsgi_read_timeout 120s;
-        uwsgi_send_timeout 120s;
+        uwsgi_pass tnoapi;        
+        uwsgi_read_timeout 180s;
+        uwsgi_send_timeout 180s;
     }
 
     # Admin
     location /admin {
         include uwsgi_params;
-        uwsgi_pass $scheme://backend:8000$request_uri;
-        uwsgi_read_timeout 120s;
-        uwsgi_send_timeout 120s;
+        uwsgi_pass tnoapi;
+        uwsgi_read_timeout 180s;
+        uwsgi_send_timeout 180s;
     }
 
     location /django_static {
         include uwsgi_params;
-        uwsgi_pass $scheme://backend:8000$request_uri;
+        uwsgi_pass tnoapi;
         uwsgi_read_timeout 120s;
         uwsgi_send_timeout 120s;
     }
 
     location /media/ {
-        uwsgi_pass $scheme://backend:8000$request_uri;
+        uwsgi_pass $scheme://tnoapi$request_uri;
         uwsgi_read_timeout 120s;
         uwsgi_send_timeout 120s;
     }
@@ -64,7 +68,7 @@ server {
     }
 
     # /docs  Diretório da documentação de usuarios builded com mkdocs
-    location /docs/ {
+    location /docs {
         alias /var/www/docs/;
         try_files $uri $uri/ /index.html;
         autoindex off;
