--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,6 @@
   // Update the 'dockerComposeFile' list if you have more compose files or use different names.
   // The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
   "dockerComposeFile": [
-    "../docker-compose-development-template.yml",
     "../docker-compose.yml",
     "docker-compose.yml"
   ],
@@ -42,6 +41,8 @@
   "customizations": {
     "vscode": {
       "settings": {
+        "terminal.integrated.defaultProfile.linux": "zsh",
+        "terminal.integrated.profiles.linux": { "zsh": { "path": "/bin/zsh" } },
         "editor.tabSize": 2,
         "editor.formatOnPaste": true,
         "editor.formatOnSave": true, // hero!
