--- a/compose/local/nginx-proxy-template.conf
+++ b/compose/local/nginx-proxy-template.conf
@@ -6,6 +6,11 @@ upstream tnofrontend {
     server frontend:3000;
 }
 
+upstream userdocs {
+    server mkdocs:8000;
+}
+
+
 # upstream tnosora{
 #     server sora:8000;
 # }
@@ -135,16 +140,21 @@ server {
     }
 
     # Mkdocs User Documentation
-    # location /docs {
-    #     proxy_pass http://mkdocs:8000/;
-    #     rewrite ^/rabbitmq/(.*)$ /$1 break;
+    location /docs/ {
+        proxy_pass http://userdocs/;
 
-    #     # live reload
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection 'upgrade';
-    #     proxy_cache_bypass $http_upgrade;
-    # }
+        # proxy_set_header X-Forwarded-For $remote_addr;
+        # proxy_set_header X-Real-IP  $remote_addr;
+        # proxy_set_header Host $host;
+
+        # # live reload
+        # proxy_http_version 1.1;
+        # proxy_set_header Upgrade $http_upgrade;
+        # proxy_set_header Connection 'upgrade';
+        # proxy_cache_bypass $http_upgrade;
+    }
+
+
 
     # Celery Flower
     location /flower {
