--- a/compose/testing/docker-compose-template.yml
+++ b/compose/testing/docker-compose-template.yml
@@ -29,6 +29,7 @@ services:
     volumes:
       - ${TNO_PROJ_DIR:-.}/nginx_proxy.conf:/etc/nginx/conf.d/default.conf
       - ${TNO_PROJ_DIR:-.}/data/public:/var/www/data
+      - ${TNO_PROJ_DIR:-.}/data/maps:/var/www/data/maps
       # - ${TNO_PROJ_DIR:-.}/logs/:/var/log/nginx/
       # - ${TNO_PROJ_DIR:-.}/data/database_subset:/var/www/data/database_subset
     depends_on:
