Fixed memory leak

--- a/compose/local/docker-compose-template.yml
+++ b/compose/local/docker-compose-template.yml
@@ -83,7 +83,15 @@ services:
     command: /start_worker.sh
     depends_on:
       - backend
-
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: "2.0"
+          memory: 200M
+        reservations:
+          cpus: "0.5"
+          memory: 20M
   # Copia do serviço backend, mas executando outro comando
   celery_beat: &celery_beat
     <<: *backend
